--- a/pages/style.css
+++ b/pages/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: "Poppins";
+    font-family: "Poppins","Arial" !important;
 }
 
 @media (max-width: 1000px) {
