--- a/pages/style.css
+++ b/pages/style.css
@@ -88,7 +88,7 @@ body {
     }
 
     #my_picture {
-        min-width: 15%;
+        min-width: 20%;
     }
 
     #me {
@@ -100,7 +100,7 @@ body {
         padding: 5px 7px 5px 7px;
         background-color: #F5F5F5;
         border-radius: 25px;
-        font-size: 17px;
+        font-size: 16px;
         text-align: center;
         box-shadow: 0 3px 6px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%) !important;
     }
@@ -116,6 +116,17 @@ body {
     .post_icon {
         width: 80% !important;
     }
+
+    .big_image {
+        width: 80% !important;
+    }
+
+
+    .center {
+        text-align: center;
+    }
+
+
 
 
 }
@@ -265,7 +276,7 @@ nav {
 
 
 .title {
-    margin: 0px 100px 0px 100px;
+    margin: 0px 20% 0px 20%;
     color: black;
     font-size: 18px;
 }
@@ -389,7 +400,7 @@ nav {
 
 
 .plain_text {
-    font-size:17px;
+    font-size:16px;
     justify-content:center;
 }
 
@@ -401,7 +412,7 @@ nav {
 
 .textual_content {
     font-family: "Poppins";
-    font-size: 15px;
+    font-size: 16px;
     text-align:justify;
     text-justify:inter-word !important;
     }
@@ -411,16 +422,16 @@ nav {
     text-align: left !important;
     padding: 15px 0px 15px 20px !important;
     max-width: 100%;
-    background-color: #c3c7ca;
-    color: black;
-    border-radius: 20px;
+    background-color: black;
+    border-radius: 10px;
     font-size: 20px;
-
+    overflow-x: auto; 
+    white-space: nowrap; 
 }
 
 code {
     font-family: Consolas,"courier new";
-    color: black;
+    color: red;
     background-color: inherit;
     padding: 2px;
 }
@@ -435,7 +446,7 @@ output {
 #date {
     text-align: right;
     font-family: "Poppins";
-    font-size: 16px;
+    font-size: 14px;
     font-style:oblique;
     text-decoration: black wavy underline;
     padding-bottom:25px;
@@ -449,6 +460,7 @@ output {
 }
 
 
+
 #me {
     display: flex;
     font-family: "Poppins";
@@ -458,7 +470,7 @@ output {
 
 #me p {
     margin: 10px 0px 0px 20px !important;
-
+    
 }
 
 
@@ -508,8 +520,9 @@ a {
 
 .black-line {
     border: none;
-    border-top: 2px solid black; /* You can adjust the thickness and style of the line */
-    margin: 20px 0; /* Adjust margin as needed */
+    border-top: 2px solid black; 
+    margin: 15px 0; 
+    
 }
 
 
@@ -526,7 +539,7 @@ rel {
 
 .titleh {
     color: black !important;
-    font-size:25px;
+    font-size:20px;
     text-align:left;
     padding-top:27px;
     padding-bottom:0px;
@@ -558,7 +571,17 @@ mark {
     background: url("images/checked.png") no-repeat top left;
     background-size: 20px;
     padding-left: 30px;
-    margin-bottom: -2px !important;
+    margin-bottom: 3px !important;
+    line-height: 1.3;
+}
+
+li strong {
+    font-weight: bold; 
+}
+
+
+p strong {
+    font-weight: bold; 
 }
 
 
@@ -670,3 +693,23 @@ variab {
 }
 
 
+.project_date {
+    text-align: right;
+    margin-bottom:0px;
+    font-size: 12px;
+    font-weight:700;
+}
+
+
+.big_image {
+    width: 30%;
+    margin: 20px 10px 0px 10px;
+    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 16%), 0 10px 10px 0 rgb(0 0 0 / 12%) !important;
+}
+
+
+.pic_description {
+    font-size: 12px;
+    margin-top:5px;
+
+}
