--- a/pages/style.css
+++ b/pages/style.css
@@ -716,3 +716,28 @@ variab {
     margin-top:5px;
 
 }
+
+
+
+
+
+
+
+
+
+
+
+.separator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 30% 9px 30%;
+    font-size: 16px;
+    font-family: Poppins;
+    font-weight: 800;
+    position: relative;
+    text-align: center;
+    color:slategrey;
+
+    
+}
