--- a/pages/style.css
+++ b/pages/style.css
@@ -731,7 +731,7 @@ variab {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 30% 9px 30%;
+    margin: 20px 30% 9px 30%!important;
     font-size: 16px;
     font-family: Poppins;
     font-weight: 800;
